--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -373,6 +373,7 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
     <addaction name="aViewPerspective"/>
     <addaction name="aViewWalk"/>
     <addaction name="aViewCenter"/>
+    <addaction name="aShowGrid"/>
     <addaction name="separator"/>
     <addaction name="aViewUser"/>
     <addaction name="aViewUserSave"/>
@@ -1769,6 +1770,17 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
    </property>
    <property name="text">
     <string>Bounds Debug</string>
+   </property>
+  </action>
+  <action name="aShowGrid">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Show Grid</string>
+   </property>
+   <property name="shortcut">
+    <string>G</string>
    </property>
   </action>
  </widget>
