--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -1450,7 +1450,7 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
   </action>
   <action name="aSettings">
    <property name="text">
-    <string>Settings</string>
+    <string>Settings...</string>
    </property>
   </action>
   <action name="aOpenMenu">
