[Settings] Disable options which aren't fully implemented

--- a/src/ui/settingsgeneral.ui
+++ b/src/ui/settingsgeneral.ui
@@ -74,6 +74,9 @@
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
            <widget class="QComboBox" name="language">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="minimumSize">
              <size>
               <width>150</width>
