--- a/src/ui/settingsrender.ui
+++ b/src/ui/settingsrender.ui
@@ -388,6 +388,9 @@
              </item>
              <item row="3" column="1">
               <widget class="QComboBox" name="startupDirection">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
                <property name="currentIndex">
                 <number>1</number>
                </property>
@@ -425,6 +428,9 @@
              </item>
              <item row="3" column="0">
               <widget class="QLabel" name="lblStartupDirection">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
                <property name="text">
                 <string>Startup Direction</string>
                </property>
