[Settings] Reimplement "Show Hidden"

--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -185,6 +185,7 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
    <addaction name="aShowNodes"/>
    <addaction name="aShowConstraints"/>
    <addaction name="aShowMarkers"/>
+   <addaction name="aShowHidden"/>
   </widget>
   <widget class="QToolBar" name="tView">
    <property name="windowTitle">
@@ -1781,6 +1782,22 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
    </property>
    <property name="shortcut">
     <string>G</string>
+   </property>
+  </action>
+  <action name="aShowHidden">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../../res/nifskope.qrc">
+     <normaloff>:/btn/hiddenDisabled</normaloff>
+     <normalon>:/btn/hidden</normalon>:/btn/hiddenDisabled</iconset>
+   </property>
+   <property name="text">
+    <string>Show Hidden</string>
+   </property>
+   <property name="statusTip">
+    <string>Show Hidden</string>
    </property>
   </action>
  </widget>
