--- a/src/ui/settingsrender.ui
+++ b/src/ui/settingsrender.ui
@@ -505,6 +505,13 @@
                </property>
               </widget>
              </item>
+             <item row="7" column="0">
+              <widget class="QCheckBox" name="chkShowHidden">
+               <property name="text">
+                <string>Show Hidden</string>
+               </property>
+              </widget>
+             </item>
             </layout>
            </widget>
           </item>
