[UI] Setting for hiding unnecessary XML metadata columns
Most of the columns are actually unnecessary for editing a NIF file as
they are not part of the NIF data, but loaded from nif.xml. Hence they
are metadata and for a cleaner and more approachable UI should be hidden
by default, with the option to show.

--- a/src/ui/settingsgeneral.ui
+++ b/src/ui/settingsgeneral.ui
@@ -194,6 +194,28 @@
         </widget>
        </item>
        <item>
+        <widget class="QGroupBox" name="groupBox_2">
+         <property name="title">
+          <string>nif.xml</string>
+         </property>
+         <property name="flat">
+          <bool>true</bool>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_5">
+          <item>
+           <widget class="QCheckBox" name="checkBox">
+            <property name="text">
+             <string>Hide metadata columns</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
         <spacer name="verticalSpacer_2">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
