--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -286,11 +286,17 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
      <string>&amp;File</string>
     </property>
     <widget class="QMenu" name="menuImport">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="title">
       <string>Import</string>
      </property>
     </widget>
     <widget class="QMenu" name="menuExport">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="title">
       <string>Export</string>
      </property>
