--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -295,7 +295,7 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
     </widget>
     <widget class="QMenu" name="menuExport">
      <property name="enabled">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <property name="title">
       <string>Export</string>
