--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -359,7 +359,6 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
       <string>Block Details</string>
      </property>
      <addaction name="aCondition"/>
-     <addaction name="aRCondition"/>
      <addaction name="aHeader"/>
     </widget>
     <widget class="QMenu" name="menuShow">
@@ -1259,8 +1258,11 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
    <property name="checkable">
     <bool>true</bool>
    </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="text">
-    <string>Hide Version Mismatched Rows</string>
+    <string>Show Non-applicable Rows</string>
    </property>
   </action>
   <action name="aRCondition">
